2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* help/manual/C/gtk-doc-manual.xml:
	  Small doc fix.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Formatting.

	* configure.in:
	* tests/gtk-doc.make:
	  Cleanup the 'make check' deps configure check.

2007-10-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.

=== Release 1.9 ===

2007-09-30  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Releasing 1.9.

2007-09-27  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-rebase.in:
	  New day, new fix. Remove testing $(DESTDIR) from makefile and use
	  Getopt::Long qw(:config gnu_getopt); in rebase.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	  And actually saving before commiting might greatly help.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Another attempt to fix the rules.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  If there is nothing to install, don't rebase.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Unbreak the last change.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Handle DESTDIR= case.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-rebase.in:
	  Fix destdir option name.

2007-09-25  Stefan Kost  <ensonic@users.sf.net>

	* tests/gtk-doc.make:
	  Get make distcheck fully working.

2007-09-25  Stefan Kost  <ensonic@users.sf.net>

	* tests/Makefile.am:
	* tests/bugs.sh:
	* tests/gobject.sh:
	* tests/gtkdoctest.sh:
	  Try to get make distcheck to run.

	* tests/gtk-doc.make:
	  Don't dist docs generated during test runs and remove some cruft.


2007-09-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* NEWS: