@@ -62,7 +62,7 @@ scan-build.stamp: $(HFILE_GLOB) $(CFILE_GLOB)
                test -f $$i || touch $$i ; \
 	    done \
 	fi
-	PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir) && \
+	@PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir) && \
 	gtkdoc-scan --module=$(DOC_MODULE) --source-dir=$(DOC_SOURCE_DIR) --ignore-headers="$(IGNORE_HFILES)" $(EXTRA_HFILES) $(SCAN_OPTIONS)
 	touch scan-build.stamp
 
@@ -74,8 +74,8 @@ $(DOC_MODULE)-decl.txt $(SCANOBJ_FILES): scan-build.stamp
 tmpl-build.stamp: $(DOC_MODULE)-decl.txt $(SCANOBJ_FILES) $(DOC_MODULE)-sections.txt $(DOC_MODULE)-overrides.txt
 	@echo 'gtk-doc: Rebuilding template files'
 	@-chmod -R u+w $(srcdir)
-	PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir) && \
-    gtkdoc-mktmpl --module=$(DOC_MODULE) $(MKTMPL_OPTIONS)
+	@PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir) && \
+	gtkdoc-mktmpl --module=$(DOC_MODULE) $(MKTMPL_OPTIONS)
 	touch tmpl-build.stamp
 
 tmpl.stamp: tmpl-build.stamp
@@ -86,7 +86,7 @@ tmpl.stamp: tmpl-build.stamp
 sgml-build.stamp: $(DOC_MODULE)-decl.txt $(SCANOBJ_FILES) $(DOC_MODULE)-sections.txt $(DOC_MODULE)-overrides.txt $(expand_content_files)
 	@echo 'gtk-doc: Building XML'
 	@-chmod -R u+w $(srcdir)
-	cd $(srcdir) && \
+	@cd $(srcdir) && \
 	PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) gtkdoc-mkdb --module=$(DOC_MODULE) --source-dir=$(DOC_SOURCE_DIR) --output-format=xml --expand-content-files="$(expand_content_files)" --main-sgml-file=$(DOC_MAIN_SGML_FILE) $(MKDB_OPTIONS)
 	touch sgml-build.stamp
 
@@ -100,12 +100,12 @@ html-build.stamp: sgml.stamp $(DOC_MAIN_SGML_FILE) $(content_files)
 	@-chmod -R u+w $(srcdir)
 	rm -rf $(srcdir)/html
 	mkdir $(srcdir)/html
-	PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir)/html && \
-    gtkdoc-mkhtml $(DOC_MODULE) ../$(DOC_MAIN_SGML_FILE)  $(MKHTML_OPTIONS)
+	@PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir)/html && \
+	gtkdoc-mkhtml $(DOC_MODULE) ../$(DOC_MAIN_SGML_FILE)  $(MKHTML_OPTIONS)
 	test "x$(HTML_IMAGES)" = "x" || ( cd $(srcdir) && cp $(HTML_IMAGES) html )
 	@echo 'gtk-doc: Fixing cross-references'
-	PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir) && \
-    gtkdoc-fixxref --module-dir=html $(FIXXREF_OPTIONS)
+	@PATH=`pwd`:$(PATH) PERL5LIB=`pwd`:$(PERL5LIB) && cd $(srcdir) && \
+	gtkdoc-fixxref --module-dir=html $(FIXXREF_OPTIONS)
 	touch html-build.stamp
 
 ##############
