@@ -1,5 +1,11 @@
 2007-10-31  Stefan Kost  <ensonic@users.sf.net>
 
+	* tests/gtk-doc.make:
+	* tests/gtkdoctest.sh:
+	  Run our own check script. Clean the make output a bit.
+
+2007-10-31  Stefan Kost  <ensonic@users.sf.net>
+
 	* help/manual/C/gtk-doc-manual.xml:
 	  Small doc fix.
 
